--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,18 +45,21 @@ nav .btn-1{
 
 
 section {
+    background: url(../assets/hero-bg.png);
     
     width: 100%;
     max-width: 1600px;
-    height: 760px;   
+    height: 760px;  
+    margin: 0 auto; 
+    vertical-align: middle;
 }
 .hero-images {
     position: relative;    
     width: 350px;          
     height: 350px;
     margin: 0 auto;
-    margin-top: 101px;
-    margin-bottom: 40px;
+    top: 70px;
+    left: 40px;
     
             
 }
@@ -74,7 +77,42 @@ section {
     z-index: 2;
  }  
  .banner-msg {
-    margin-top: 30px;
-    text-align: center;                 
- }         
+    margin: 0 auto;
+    margin-top: 100px;
+    text-align: center;
+    
+                   
+ } 
+ .banner-msg h2 {
+    font-size: 60px;
+    font-weight: 800;
+    color: white;
 
+
+ }   
+ .banner-msg p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: auto;
+    color: #ffffff;
+    margin-bottom: 20px;
+ } 
+ .banner-msg .btn-2 {
+    padding: 12.5px 20px 12.5px 30px;
+    color: white;
+    background: linear-gradient(to bottom left, purple , yellow);
+    border: none;
+    border-radius: 20px;
+    
+ }
+.banner-msg .btn-3 {
+    padding: 12.5px 20px 12.5px 40px;
+    color: rgb(8, 240, 8);
+    background: transparent;
+    border-color: rgb(2, 251, 10);
+    border-radius: 20px;
+}
+.banner-msg .btn-2, .banner-msg .btn-3{
+    gap: 28px;
+
+}
