--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,3 +165,75 @@ nav .btn-1{
     color: #ffffff;
     margin-bottom: 120px;
 }
+.grid-container{
+    width: 100%;
+    max-width: 1600px;
+    background-color: #230E3D;
+}
+.grid-container h1{
+    font-size: 48px;
+    font-weight: bold;
+   padding-top: 120px;
+    margin-bottom: 40px;
+    text-align: center;
+    color: white;
+
+}
+.grid-about .grid-box-1 ,.grid-box-2 ,.grid-box-3,.grid-box-4, .grid-box-5 h3{
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.grid-about .grid-box-1 ,.grid-box-2 ,.grid-box-3,.grid-box-4, .grid-box-5 p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFFFFF;
+}
+
+.grid-about{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.grid-about img{
+    margin-bottom: 16px;
+}
+.grid-about h3{
+    margin-bottom: 16px;
+}
+.grid-box-1 img{
+    padding-top: 108px;
+}
+.grid-about>*{
+    
+    border-radius: 20px;
+    padding: 30px;
+    background-color: #351165;
+}
+.grid-box-1{
+    grid-area: grid-box-1;
+}
+.grid-box-2{
+    grid-area: grid-box-2;
+}
+.grid-box-3{
+    grid-area: grid-box-3;
+}
+.grid-box-4{
+    grid-area: grid-box-4;
+}
+.grid-box-5{
+    grid-area: grid-box-5;
+}
+
+.grid-about{
+    display: grid;
+    gap: 30px;
+    grid-template-areas: 
+         " grid-box-1  grid-box-2  grid-box-2 "
+         " grid-box-1  grid-box-3  grid-box-3"
+         " grid-box-4  grid-box-4  grid-box-5"
+
+}
