--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,6 +42,10 @@ nav .btn-1{
     margin-right: 200px;
     background: linear-gradient(45deg, #f8ff3c, #d73295);
 }
+nav .menu{
+  
+    display: none;
+}
 
 
  .hero-container{
@@ -328,3 +332,88 @@ nav .btn-1{
     gap: 8px;
 
 }
+.footer {
+    background: url(../assets/footer-bg.png);
+   width: 100%;
+   max-width: 1600px;
+   height: 412px;
+   text-align: center;
+
+}
+.footer h1{
+    font-size: 68px;
+    font-weight: Bold;
+    color: #FFFFFF;
+    
+    padding-top: 120px;
+   
+}
+.footer h1 span{
+    color: #ff3cf0;
+}
+.footer .footer-link{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: auto;
+    color: #FFFFFF;
+    
+    
+}
+.footer-link{
+    width: 100%;
+    max-width: 544px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+    margin: 0 auto;
+}
+.footer p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #FFFFFF;
+    padding-top: 32px;
+}
+
+
+@media screen and (max-width:576px) {
+    .about{
+        display: none;
+    }
+    .menu{
+       
+        display: inline;
+    }
+    .podcast-rating{
+    
+    display: flex;
+    flex-wrap: wrap;
+}
+.grid-about{
+    display: grid;
+    
+    grid-template-areas: 
+         " grid-box-1 "
+         " grid-box-2 "
+         " grid-box-3 "
+         " grid-box-4 "
+         " grid-box-5 "
+}
+.card-container{
+    flex-direction: column;
+}
+.host-container{
+    flex-direction: column;
+}
+.footer-link{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+}
+
+    
+}
+    
+
+
+
